them chuc nang cap nhat de cuong cac mon hoc truoc va mon hoc tien quyet