@@ -6,32 +6,29 @@ import java.util.stream.Collectors;
 public class QuanLyDeCuong {
     private static final Set<DeCuongMonHoc> DANH_SACH_DE_CUONG = new HashSet<>();
     // set cac de cuong mon hoc cua rieng giao vien
-    private Set<DeCuongMonHoc> set = new LimitedSet<>(CauHinh.soLuongDeCuong);
+    private Set<DeCuongMonHoc> deCuongCuaGV = new LimitedSet<>(CauHinh.soLuongDeCuong);
 
     public void themDeCuong(DeCuongMonHoc... deCuongMonHoc) {
         Arrays.stream(deCuongMonHoc).forEach(dc -> {
             if (this.checkDuplicate(dc))
                 throw new IllegalArgumentException("Đề cương cho môn học này đã tồn tại!");
             else
-                this.set.add(dc);
-            QuanLyDeCuong.DANH_SACH_DE_CUONG.addAll(set);
+                this.deCuongCuaGV.add(dc);
+            QuanLyDeCuong.DANH_SACH_DE_CUONG.addAll(deCuongCuaGV);
         });
-    }
-
-    // them de cuong bang cach tu nhap
-    public void themDeCuong() {
-        DeCuongMonHoc tmp = new DeCuongMonHoc();
-        tmp.nhapDeCuong();
-        this.themDeCuong(tmp);
     }
 
     private boolean checkDuplicate(DeCuongMonHoc deCuongMonHoc) {
         return QuanLyDeCuong.DANH_SACH_DE_CUONG.contains(deCuongMonHoc);
     }
 
+    private boolean checkContain(DeCuongMonHoc deCuongMonHoc) {
+        return this.deCuongCuaGV.contains(deCuongMonHoc);
+    }
+
     // tim kiem mon hoc cua de cuong theo ma mon hoc
     public MonHoc timMonHoc(int id) {
-        return QuanLyDeCuong.DANH_SACH_DE_CUONG.stream()
+        return this.deCuongCuaGV.stream()
                 .map(DeCuongMonHoc::getMonHoc)
                 .filter(monHoc -> monHoc.getMa() == id)
                 // if a value is present, returns the value otherwise return null
@@ -40,16 +37,22 @@ public class QuanLyDeCuong {
 
     // tim kiem mon hoc cua de cuong theo ten mon hoc
     public List<MonHoc> timMonHoc(String kw) {
-        return QuanLyDeCuong.DANH_SACH_DE_CUONG.stream()
+        return this.deCuongCuaGV.stream()
                 .map(DeCuongMonHoc::getMonHoc)
                 .filter(monHoc -> monHoc.getTen().contains(kw))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // tim kiem chinh xac mon hoc
-    private static MonHoc findCourseByName(String name) {
+    public static MonHoc findCourse(String name) {
         return DANH_SACH_DE_CUONG.stream().map(DeCuongMonHoc::getMonHoc)
                 .filter(monHoc -> monHoc.getTen().equalsIgnoreCase(name))
+                .findFirst().orElse(null);
+    }
+
+    public static MonHoc findCourse(int id) {
+        return DANH_SACH_DE_CUONG.stream().map(DeCuongMonHoc::getMonHoc)
+                .filter(monHoc -> monHoc.getMa() == id)
                 .findFirst().orElse(null);
     }
 
@@ -69,40 +72,68 @@ public class QuanLyDeCuong {
 
     public List<MonHoc> getRelatedCoures(int id) {
         MonHoc m = this.timMonHoc(id);
+        if (m == null) {
+            throw new IllegalArgumentException("Ma mon hoc sai");
+        }
         return QuanLyDeCuong.DANH_SACH_DE_CUONG.stream().map(DeCuongMonHoc::getMonHoc)
                 .filter(monHoc -> monHoc.dsMonHocTruoc().contains(m) ||
-                                  monHoc.dsMonTienQuyet().contains(m))
+                        monHoc.dsMonTienQuyet().contains(m))
                 .collect(Collectors.toList());
     }
 
     public List<MonHoc> getRelatedCoures(String nameOfCourse) {
-        MonHoc m = QuanLyDeCuong.findCourseByName(nameOfCourse);
-        if (m == null) {
-            throw new IllegalArgumentException("Ten mon hoc khong dung");
-        }
+        MonHoc m = QuanLyDeCuong.findCourse(nameOfCourse);
+        if (m == null) throw new IllegalArgumentException("Ten mon hoc khong dung");
+
         return QuanLyDeCuong.DANH_SACH_DE_CUONG.stream().map(DeCuongMonHoc::getMonHoc)
                 .filter(monHoc -> monHoc.dsMonHocTruoc().contains(m) ||
-                                  monHoc.dsMonTienQuyet().contains(m))
+                        monHoc.dsMonTienQuyet().contains(m))
                 .collect(Collectors.toList());
+    }
+
+    public void themMonHocDieuKien(MonHoc m, MonHoc monTienQuyet, MonDieuKien monDieuKien) {
+        var courseList = this.deCuongCuaGV.stream()
+                .map(DeCuongMonHoc::getMonHoc)
+                .toList();
+        if (courseList.contains(m)) {
+            monDieuKien.themMonDieuKien(m, monTienQuyet);
+        } else {
+            throw new IllegalArgumentException("Ma mon hoc khong dung");
+        }
+    }
+
+    public void xoaMonDieuKien(MonHoc m, MonHoc monTienQuyet, MonDieuKien monDieuKien) {
+        monDieuKien.xoaMonDieuKien(m, monTienQuyet);
+    }
+
+    public void xoaMonDieuKien(MonHoc m, int id, MonDieuKien monDieuKien) {
+        var requiredCourse = m.dsMonTienQuyet().stream().filter(monHoc -> monHoc.getMa() == id)
+                .findFirst().orElse(null);
+        if (requiredCourse == null) {
+            throw new IllegalArgumentException("Ma mon hoc khong dung");
+        }
+        this.xoaMonDieuKien(m, requiredCourse, monDieuKien);
     }
 
     // tra ve danh sach cac de cuong
     public List<DeCuongMonHoc> danhSachDeCuong() {
-        return this.set.stream().toList();
+        return this.deCuongCuaGV.stream().toList();
     }
 
     public void sapXep() {
-        List<DeCuongMonHoc> sortedArray = new ArrayList<>(this.set);
+        List<DeCuongMonHoc> sortedArray = new ArrayList<>(this.deCuongCuaGV);
         sortedArray.sort(new DeCuongComparator());
 
-        this.set = new LinkedHashSet<>(sortedArray);
+        this.deCuongCuaGV = new LinkedHashSet<>(sortedArray);
     }
 
     public void xuatDeCuong(int id) {
-        DeCuongMonHoc dc = this.set.stream()
+        DeCuongMonHoc dc = this.deCuongCuaGV.stream()
                 .filter(deCuongMonHoc -> deCuongMonHoc.getMonHoc().getMa() == id)
                 .findFirst().orElse(null);
-
+        if (dc == null) {
+            throw new IllegalArgumentException("Ma khong dung");
+        }
         System.out.println(dc);
     }
 
@@ -111,7 +142,7 @@ public class QuanLyDeCuong {
         // tree map sap xep tang dan theo key
         Map<Integer, List<DeCuongMonHoc>> thongKeDeCuong = new TreeMap<>();
 
-        for (DeCuongMonHoc deCuongMonHoc : set) {
+        for (DeCuongMonHoc deCuongMonHoc : deCuongCuaGV) {
             int soTinChi = deCuongMonHoc.getMonHoc().getSoTinChi();
             if (!thongKeDeCuong.containsKey(soTinChi))
                 thongKeDeCuong.put(soTinChi, new ArrayList<>());
@@ -127,4 +158,5 @@ public class QuanLyDeCuong {
         }
     }
 }
+
 
